--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,47 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding-top: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(36, 34, 34);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav {
+  height: 50px;
+  border: 1px solid #dfdfdf;
+}
+
+.header {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.upload-form {
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+}
+
+.input>label>img {
+  height: 100%;
+  width: auto;
+}
+
+.input>input {
+  display: none;
 }
 
 .progress-bar {
-  height: 2rem;
+  height: 45px;
   background: green;
-  margin-top: 20px;
 }
 
 .gallery {
